# smart_home

./: .env  Cargo.toml  README.md
examples/: delete_device.sh  delete_house.sh  delete_room.sh  get_device_info.sh  get_house.sh  get_house_devices.sh  get_houses.sh  get_room.sh  get_room_devices.sh  get_rooms.sh  patch_device_info.sh  patch_device_name.sh  patch_house_name.sh  patch_room_name.sh  post_device.sh  post_house.sh  post_room.sh  startup_example.rs
src/: errors.rs  lib.rs  main.rs  routes.rs
src/home_part/: device.rs  errors.rs  home.rs  mod.rs  room.rs
src/sql/: methods.rs  mod.rs  models.rs
