[package]
name = "smart_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
